--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
+    <main>
+        <img src="./src/images/icon-star.svg" alt="Icon Star">
+        <h1>How did we do?</h1>
+        <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
+        <div>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>4</button>
+            <button>5</button>
+        </div>
+        <form>
+            <button type="submit">Submit</button>
+        </form>
+    </main>
 </body>
 <footer>
     <div class="attribution">
