--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./src/css/style.css">
 </head>
 <body>
-    <main>
+    <main class="card">
         <img src="./src/images/icon-star.svg" alt="Icon Star">
         <h1>How did we do?</h1>
         <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
@@ -26,6 +26,12 @@
             <button type="submit">Submit</button>
         </form>
     </main>
+    <!-- <section>
+        <img src="./src/images/illustration-thank-you.svg" alt="illustration-thank-you">
+        <span>You selected 4 out of 5</span>
+        <h3>Thank you!</h3>
+        <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
+    </section> -->
 </body>
 <footer>
     <div class="attribution">
