--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <p>We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in touch!</p>
     </section> -->
 </body>
-<footer>
+<!-- <footer>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
         Coded by <a href="#">Flávia Oliveira</a>.
     </div>
-</footer>
+</footer> -->
 </html>
