--- a/src/pages/thank-you.html
+++ b/src/pages/thank-you.html
@@ -6,26 +6,12 @@
 
     <title>Projeto</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
 
-    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+
 </head>
 <body>
-    <main class="card">
-        <img src="./src/images/icon-star.svg" alt="Icon Star">
-        <h1>How did we do?</h1>
-        <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
-        <div class="buttons">
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-        </div>
-        <form>
-            <button type="submit" class="btn-submit"><a href="./src/pages/thank-you.html">Submit</a></button> 
-        </form>
-    </main>
     <section class="thank-you">
         <img src="./src/images/illustration-thank-you.svg" alt="illustration-thank-you">
         <span class="span">You selected 4 out of 5</span>
