--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- <footer>
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-        Coded by <a href="#">Flávia Oliveira</a>.
+        Coded by <a href="#">Flávia Conceição Oliveira</a>.
     </div>
 </footer> -->
 </html>
